<resources>
    <string name="app_name">shackApp</string>
    <string name="login">Login</string>
    <string name="login_name">Profile Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="rules">Rules</string>
    <string name="rules_text">Basically chess, but pieces are allowed to move in the third dimension. All other rules remains. (Gonna expand later lol)</string>
    <string name="email">Email</string>
    <string name="why_email">We only ask for email for account security reasons. We will never send you spam, offers, etc.</string>
    <string name="login_password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login_register">Register \nnew profile</string>
    <string name="new_game">New Game</string>
    <string name="random_opponent">Random opponent</string>
    <string name="opponent">Opponent:</string>
    <string name="type_name">Type name...</string>
    <string name="type_quote">Select a quote...</string>
    <string name="create_screen_tip">Big brain players do big brain moves. If you find yourself doing small brain moves, odds are you are a small brain player.</string>
    <string name="create">Create</string>
    <string name="pawn_promotion">Pawn Promotion</string>
    <string name="pawn_promotion_text">Choose a piece of your choice to upgrade your pawn from!</string>


</resources>
